# pullenti-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
bindings/python/: Cargo.toml  pyproject.toml  test.py
bindings/python/python/pullentipy/: __init__.py  _pullentipy.pyi
bindings/python/src/: lib.rs
crates/pullenti/: Cargo.toml
crates/pullenti-ner/: Cargo.toml
crates/pullenti-ner/resources/: ShortNames.txt
crates/pullenti-ner/src/: analysis_kit.rs  analysis_result.rs  analyzer.rs  lib.rs  morph_collection.rs  processor.rs  processor_service.rs  referent.rs  sdk.rs  source_of_analysis.rs  token.rs
crates/pullenti-ner/src/address/: address_analyzer.rs  address_referent.rs  mod.rs  street_table.rs
crates/pullenti-ner/src/bank/: bank_analyzer.rs  bank_referent.rs  mod.rs
crates/pullenti-ner/src/booklink/: booklink_analyzer.rs  booklink_referent.rs  mod.rs
crates/pullenti-ner/src/chemical/: chemical_analyzer.rs  chemical_referent.rs  chemical_token.rs  mod.rs
crates/pullenti-ner/src/core/: bracket_helper.rs  conjunction.rs  misc_helper.rs  mod.rs  noun_phrase.rs  number_helper.rs  preposition.rs  termin.rs  verb_phrase.rs
crates/pullenti-ner/src/date/: date_analyzer.rs  date_item_token.rs  date_pointer_type.rs  date_range_referent.rs  date_referent.rs  mod.rs
crates/pullenti-ner/src/decree/: decree_analyzer.rs  decree_referent.rs  decree_table.rs  mod.rs
crates/pullenti-ner/src/definition/: definition_analyzer.rs  definition_referent.rs  mod.rs
crates/pullenti-ner/src/denomination/: denomination_analyzer.rs  denomination_referent.rs  mod.rs
crates/pullenti-ner/src/deriv/: control_model.rs  (+7 more)
crates/pullenti-ner/tests/: integration_test.rs
crates/pullenti/examples/: dbg_morph.rs  demo.rs  demomy.rs  morph_test.rs  perf_test.rs
crates/pullenti/src/: lib.rs
(+129 files in other folders)
